feat(notifications): add CRUD operations on notifications
