# api-gateway/src/doc/openapi/swagger.yaml
@@ -379,6 +379,128 @@ paths:
           description: Successfully performed the action.
         '401':
           description: The user is not authorized
+  /v0/api/alert/subscriptions:
+    get:
+      summary: Retrieve user's subscriptions
+      tags:
+        - Subscriptions
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully retrieved subscriptions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TopicAddr'
+        '400':
+          description: Invalid user ID
+        '500':
+          description: Internal server error
+
+    delete:
+      summary: Delete a user's subscription
+      tags:
+        - Subscriptions
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: topicAddr
+          description: "topic string representation of the form `notification.<topic>.<sensorName | * | #>.<query | #>`"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Subscription successfully deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Subscription deleted"
+        '400':
+          description: Invalid parameters
+        '404':
+          description: Subscription not found
+        '500':
+          description: Internal server error
+    post:
+      summary: Create a new user subscription
+      tags:
+        - Subscriptions
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SubscriptionRequest'
+      responses:
+        '200':
+          description: Successful subscription
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubscriptionResponse'
+        '400':
+          description: Subscription error
+
+  /v0/api/alert:ws:
+    get:
+      summary: WebSocket connection endpoint (the actual endpoint is `/v0/api/alert`)
+      tags:
+        - Subscriptions
+      parameters:
+        - in: query
+          name: uid
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: topicAddr
+          required: true
+          schema:
+            type: string
+      responses:
+        '101':
+          description: WebSocket Upgrade Successful
+      x-websocket:
+        connectionParameters:
+          $ref: '#/components/schemas/WebSocketConnectionParams'
+
+  /v0/api/alert:
+    get:
+      summary: Get alert list for input user
+      tags:
+        - Subscriptions
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of all users alerts to which he subscribed to.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/NotificationAlert'
+
 components:
   schemas:
     BaseRequest:
@@ -433,9 +555,84 @@ components:
             sensorCronJobTimeMinute:
               type: string
               description: New cronjob minute in the interval [0, 59]
+    TopicAddr:
+      type: string
+      example: "notification.<topic>.<sensorName | * | #>.<query | #>"
 
+    SubscriptionRequest:
+      type: object
+      required:
+        - userId
+        - topic
+      properties:
+        userId:
+          type: string
+          example: "user123"
+        topic:
+          $ref: '#/components/schemas/SubscriptionTopic'
+    
+    SubscriptionTopic:
+      type: object
+      required:
+        - topic
+      properties:
+        topic:
+          type: string
+          example: "temperature"
+        sensorName:
+          type: string
+          example: "gambettola-temp"
+        query:
+          type: string
+          example: "threshold-25%"
 
+    SubscriptionResponse:
+      type: object
+      properties:
+        uid:
+          type: string
+          example: "c2a044be-f73b-4788-8532-3130aee9bcb7"
+        topicAddr:
+          type: string
+          example: "temperature.gambettola-temp.threshold-25%"
 
+    WebSocketConnectionParams:
+      type: object
+      required:
+        - uid
+        - topicAddr
+      properties:
+        uid:
+          type: string
+          description: User's unique identifier
+        topicAddr:
+          type: string
+          description: Topic to subscribe to
+
+    NotificationAlert:
+      type: object
+      properties:
+        id:
+          type: string
+          example: '65a1b2c3d4e5f6g7h8i9j0k'
+        sensorName:
+          type: string
+          example: 'gambettola-river'
+        type:
+          type: string
+          example: 'water'
+        value:
+          type: number
+          example: 10.2
+        unit:
+          type: string
+          example: 'm'
+        timestamp:
+          type: number
+          example: 1223123
+        query:
+          type: object
+          example: { value: 10.0, name: 'theshold-25%' }
 
 tags:
   - name: Sensor
